<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="org.d3ifcool.ppob_counterpulsa.PortalRegistration">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_identity_number"
            android:inputType="number"
            android:hint="@string/registration_identity_number"
            android:drawableLeft="@mipmap/identity_number_field"
            android:drawableStart="@mipmap/identity_number_field" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_full_name"
            android:inputType="text"
            android:hint="@string/registration_full_name"
            android:drawableLeft="@mipmap/full_name_field"
            android:drawableStart="@mipmap/full_name_field" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_email"
            android:inputType="textEmailAddress"
            android:hint="@string/registration_email"
            android:drawableLeft="@mipmap/email_field"
            android:drawableStart="@mipmap/email_field" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_phone_number"
            android:inputType="phone"
            android:hint="@string/registration_phone_number"
            android:drawableLeft="@mipmap/phone_number_field"
            android:drawableStart="@mipmap/phone_number_field" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_address"
            android:inputType="text"
            android:hint="@string/registration_address"
            android:drawableLeft="@mipmap/address_field"
            android:drawableStart="@mipmap/address_field" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_registration"
        android:textColor="@color/colorMain"
        android:text="@string/registration_button"
        android:layout_marginTop="16dp"/>

</LinearLayout>