<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="org.d3ifcool.ppob_counterpulsa.PortalLogin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_phone_number"
            android:inputType="phone"
            android:hint="@string/login_phone_number"
            android:drawableLeft="@mipmap/phone_number_field"
            android:drawableStart="@mipmap/phone_number_field" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:drawableLeft="@mipmap/password_field"
                android:drawableStart="@mipmap/password_field"
                android:drawableRight="@mipmap/view_password_field"
                android:drawableEnd="@mipmap/view_password_field"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login"
        android:textColor="@color/colorMain"
        android:text="@string/login_button"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_registration"
        android:textColor="@color/colorMain"
        android:text="@string/registration_button"
        android:layout_marginTop="16dp"/>

</LinearLayout>